--- a/app.css
+++ b/app.css
@@ -36,7 +36,7 @@
 .darktheme {
   /* Dark Colors  */
   --accent: #57a0d9; /* Hover color */
-  --background: #1c1b22; /* Background color 19171a */
+  --background: #19171a; /* Background color 19171a */
   --cards: #201e21; /* Cards color */
 
   /* Fonts Color */
